--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -5,4 +5,21 @@
 @import "bootstrap/scss/bootstrap";
 
 // 自訂scss
-@import "./footer";
+@import "./diff-card";
+
+// 圓角，沒有map只好新增在這裡
+.radius-12 {
+  border-radius: 12px !important;
+}
+.radius-16 {
+  border-radius: 16px !important;
+}
+.radius-24 {
+  border-radius: 24px !important;
+}
+.radius-32 {
+  border-radius: 32px !important;
+}
+.radius-60 {
+  border-radius: 60px !important;
+}
